--- a/darkrp_rules.html
+++ b/darkrp_rules.html
@@ -552,8 +552,7 @@
                     </ul>
                     <h4>Rules:</h4>
                     <ul>
-                        <li>As a Meth Cook, you are only allowed to base with the Hired Goon, or another Meth Cook.</li>
-                        <li><i>If 2 cooks are basing together, they cannot have a hired goon in the base with them.</i></li>
+                        <li>As a Meth Cook, you are only allowed to base with the Hired Goon.</li>
                     </ul>
                 </div>
                 <h3 class="red">Ninja</h3>
