--- a/index.html
+++ b/index.html
@@ -643,8 +643,7 @@
                       </ul>
                     <h4><b>Tips:</b></h4>
                     <ul class="tips">
-                        <li>Please read the above section which explains our policies on base building.</li>
-						<li>Consider hiring a security guard or two. Gun stores are high value targets and as such are often raided.</li>
+                        <li>Consider hiring a security guard or two. Gun stores are high value targets and as such are often raided.</li>
                         <li>It is not illegal to sell weapons to someone who doesn't carry a license. It is up to the person holding a weapon to have a license for it.</li>
                     </ul>
                 </div>
@@ -1007,7 +1006,7 @@
 			<b><h2>Useful links:</h2></b><br>
 				Want to support MG and unlock extra features? Make a <a href="http://monumentalgaming.net/donate/" >Donation</a>!<br>
 				Are you missing files? Try subscribing to <a href="http://monumentalgaming.net/index.php?/topic/5434-missing-files-or-textures-look-no-further/" >these</a>!<br>
-				Are you banned? Fill out a <a href="http://monumentalgaming.net/index.php?/forum/14-ban-appeals/" >Ban Appeal</a>.<br>
+				Are you banned? Doesn't that suck.. Fill out a <a href="http://monumentalgaming.net/index.php?/forum/14-ban-appeals/" >Ban Appeal</a>.<br>
 				Minges online? No staff? Collect evidence and fill out a <a href="http://monumentalgaming.net/index.php?/forum/13-ban-requests/" >Ban Request</a>.<br>
 				Staff being abusive? Collect evidence and fill out an <a href="http://monumentalgaming.net/index.php?/forum/15-admin-abuse/" >Admin Abuse Complaint</a>.<br>
 				Do you have ideas to improve the server? Feel free to make your <a href="http://monumentalgaming.net/index.php?/forum/12-suggestions/" >Suggestion</a>.<br>
@@ -1257,7 +1256,7 @@ Meth Cook:
 Complete Fresh Server Rebuild - Hello World!
 
 The DarkRP update has finally happened. As the server has been up for a bit over 3 years, the update has included a reset of pretty much everything except for user ranks and utime. This should improve server performance and roleplay. This is mainly a massive back end update with some new content. Here is the main things that have happened:
-
+<br>
 <li>Economy Reset. Donators over the past few months will be reimbursed RP money over the next week more info to come.
 <li>Adv Dupe Reset. People can request to have some dupes bought back over the next week more info to come.
 <li>A lot of fixes.
