--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
 
 
 
-<br><b>3 November 2016</b>
+<br><br><b>3 November 2016</b>
 
 <li>General:
 	<ul>
@@ -1055,7 +1055,7 @@
 
 
 
-<br><b>7 September 2016</b><br>
+<br><br><b>7 September 2016</b><br>
 
 <li>IMPORTANT! Fully Reworked Arrest System for All Law Enforcement:
 	<ul>
@@ -1252,7 +1252,7 @@ Meth Cook:
 
 	
 
-<br><b>1 February 2016</b><br>
+<br><br><b>1 February 2016</b><br>
 Complete Fresh Server Rebuild - Hello World!
 
 The DarkRP update has finally happened. As the server has been up for a bit over 3 years, the update has included a reset of pretty much everything except for user ranks and utime. This should improve server performance and roleplay. This is mainly a massive back end update with some new content. Here is the main things that have happened:
