--- a/index.html
+++ b/index.html
@@ -1155,12 +1155,12 @@
 
 Because of recent optomisations and more server power. The player slots have increased to 56 for testing.
 
-Meth Cook:
+<li>Meth Cook:
+	<ul>
 <li>Meth Cook model changed to a temporary basic model to prevent random death occurring upon spawning into the game.
 <li>The value of a pound of meth has further increased to 90, from 85.
 <li>Meth cook stove and jar sounds temporarily removed to prevent cooks being warranted over unrealistically long distance sounds.
-	<ul>
-		<li>The unwritten rule for meth vs police is: It's just like weed, if they can see it (even through a glass window) they can arrest/destroy.</li><br>
+<li>The unwritten rule for meth vs police is: It's just like weed, if they can see it (even through a glass window) they can arrest/destroy.</li><br>
 	</ul>
 
 
@@ -1256,7 +1256,7 @@ Meth Cook:
 Complete Fresh Server Rebuild - Hello World!
 
 The DarkRP update has finally happened. As the server has been up for a bit over 3 years, the update has included a reset of pretty much everything except for user ranks and utime. This should improve server performance and roleplay. This is mainly a massive back end update with some new content. Here is the main things that have happened:
-<br>
+<br><br>
 <li>Economy Reset. Donators over the past few months will be reimbursed RP money over the next week more info to come.
 <li>Adv Dupe Reset. People can request to have some dupes bought back over the next week more info to come.
 <li>A lot of fixes.
