--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <h2>Welcome to Monumental Gaming DarkRP!</h2><br>
             <p>To ensure that all of our players have the best experience possible, we have a comprehensive rule set that must be followed at all times.<br/>
 			Please take some time to read through the rules and if you have any questions or need assistance with rule breakers:<br/>
-			Please contact the staff team using admin chat. Eg:  <i>@ Admin I was RDM'd. </i><br/>
+			Politely contact the staff team using admin chat. Eg:  <i>@ Admin I was RDM'd. </i><br/>
 			</p>
 
 			<!--<br><div class="recentchanges">-->
