--- a/index.html
+++ b/index.html
@@ -994,6 +994,11 @@
                     <ul>
                         <li>As the Town Creep, you must charge a minimum of $100 to stalk someone.</li>
                         <li>As the Town Creep, you must not kill your target unless it is self defense.</li>
+			<li>As the Town Creep, you are allowed to base with anyone, provided you do not participate in any combat.</li>
+                    </ul>
+                   <h4><b>Tips:</b></h4>
+                    <ul class="tips">
+                        <li>Eg: Get Hired to stalk a base entrance alert your client when they are not home.</li>
                     </ul>
                 </div>
 
