--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 						<ul>
 							<li>Do not shoot raiders who are leaving because of the 10 minute time limit.</li>
 							<li>Raiders cannot intentionally stall by calling raid then randomly roaming the streets for several minutes.</li>
-							<li>Raiders cannot intentionally stall if you they finished the raid. Leave and call it over.</li>
+							<li>Raiders cannot intentionally stall if they have finished the raid. Leave and call it over.</li>
 						</ul>
 					<li>Hitmen/Ninjas are allowed to raid, however only to kill a target. They cannot touch, steal, or destroy any property or allow others to.</li><br>
 			
@@ -449,7 +449,7 @@
 							<li>You have a maximum of 1 locked door in your entrance, regardless of how your entrance is designed.</li>
 		                    <li>Doors must be built with a single prop to ensure they can be lock picked. No overlapping props are allowed at doors.</li>
 							<li>All fading doors must be lockpickable and have an attached keypad/button directly next to the door, on both sides, which is clearly visible.</li>
-                            <li>The keypad must stay open for at least 4 seconds once a successful password has been entered..</li>
+                            <li>The keypad must stay open for at least 4 seconds once a successful password has been entered.</li>
                         </ul>
                     </li>
 					<li>You may have 2 extra doors, however these doors can only be triggered by buttons which must be placed directly on the centre or side of the door.</li>
@@ -756,9 +756,9 @@
                         <li>As the Mayor, before initiating a lockdown you must /broadcast the reason. Eg: <em>/broadcast Lockdown Reason: Gang violence on the street.</em></li>
                         <li>As the Mayor, keep the laws realistic and roleplay focused.</li>
                         <li>As the Mayor, the laws you place must not breach default laws or server rules. Eg: Arresting anyone with the name 'Johnny' on sight.</li>
-                        <li>As the Mayor, cannot not act as a Police Officer or Crusader. You may only unarrest people.</li>
-                        <li>As the Mayor, cannot participate in raids or defend the PD unless your life is immediately threatened.</li>
-                        <li>As the Mayor, cannot not make a law prohibiting jaywalking.</li>
+                        <li>As the Mayor, you cannot act as a Police Officer or Crusader. You may only unarrest people.</li>
+                        <li>As the Mayor, you cannot participate in raids or defend the PD unless your life is immediately threatened.</li>
+                        <li>As the Mayor, you cannot make a law prohibiting jaywalking.</li>
 						<li>As you are a Government job, you may only 'base' in the PD. Government jobs cannot have private bases.
 							<ul>
 								<li>An 'outpost' (eg: rooftop pillbox) is not included as a base, but only S.W.A.T. can base within any 'outpost'.</li>
