--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
                     </li>
 					<li>You may have 2 extra doors, however these doors can only be triggered by buttons which must be placed directly on the centre or side of the door.</li>
 					<li>All elevators and timed doors are considered a locked door. While you can use them, it's strategically far better that you don't.</li>
+					<li>You are not permitted to use any kotkeys or fast methods of access to get through your front door. You must use your keypad.</li>
 					<li>Fading doors are to be used as doors, windows and box lids only. Don't make bridges, stairs, floors or ceilings that fade.</li>
 					<li>Fading props cannot be the same material as its surroundings in an attempt to hide it. This applies to all fading props.</li>
 					<li>You must not pulse, fade, use, or open any door that is being lock picked. Note: This does not apply to windows.</li>
