--- a/index.html
+++ b/index.html
@@ -531,6 +531,25 @@
 						<li>Banker can be a difficult role to master in following all the base rules while in turn building an effective base.</li>
                     </ul>
                 </div>
+   		<h3 class="red"><i>Bartender</i></h3>
+                <div class="dropdown">
+                    <h4><b>Description:</b></h4>
+                    <ul>
+                        <li>As a Bartender, set up a shop at the designated building for Bartender.</li>
+                        <li>Authenticate yourself on the Slots Vault upstairs to receive profits from the Slot Machines.</li>
+			<li>Hire up to 2 security guards to help defend your establishment.</li>
+                    </ul>
+                    <h4><b>Rules:</b></h4>
+                    <ul>
+                        <li>As a Bartender, your Bar must be open to the public at all times. You are not allowed to AFK for over 5 minutes.</li>
+                        <li>Only the banker and his guards can defend the bank. Bystanders or customers cannot assist a banker defend his base.</li>
+                    </ul>
+                    <h4><b>Tips:</b></h4>
+                    <ul class="tips">
+                        <li>Offer your customers drinks and vapes for some extra cash.</li>
+			<li>Decorate the Bar to increase its atmosphere.</li>
+                    </ul>
+                </div>
                 <h3 class="red"><i>Black Market Dealer</i></h3>
                 <div class="dropdown">
                     <h4><b>Description:</b></h4>
