--- a/index.html
+++ b/index.html
@@ -301,6 +301,16 @@
 						</ul></li>
                     <li>For any transaction involving currency, the seller must provide said goods or a refund.</li><br>
 
+			<b>Cars:</b>
+					<li>WARNING: Playing bumper cars is NOT tolerated. Do not intentionally ram others. Apologise over accidents.</li>
+					<li>WARNING: Do not throw props at cars or attempt to release a stuck car using props. Go to the dealer and have it returned.</li>
+					<li>Do not build elevators and ramps to get cars into unreasonable spots. Keep cars at ground level.</li>
+					<li>Do not create long ramps without walls (easy to fall off) as part of a base entrance.</li>
+					<li>Do not steal, take, or car jack others cars. The vehicle owner decides who drives at all times.</li>
+					<li>Park your car in a car park or on a footpath. Dont park/exit your vehicle on the road.</li>
+					<li>Drive safely, keep down the speed and don't attempt to run others over.</li>
+					<li>Follow arrows and road signage. Blinkers (ALT + Left/Right Click) is optional.</li><br>
+
 
 			<b>AFK and Suicide:</b>					
 					<li>Do not AFK for long periods of time as any job other than Citizen or Hobo.</li>
