--- a/index.html
+++ b/index.html
@@ -302,16 +302,21 @@
                     <li>For any transaction involving currency, the seller must provide said goods or a refund.</li><br>
 
 			<b>Cars:</b>
-					<li>WARNING: Playing bumper cars is NOT tolerated. Do not intentionally ram others. Apologise over accidents.</li>
+					<li>WARNING: Playing bumper cars is NOT tolerated. Do not intentionally ram others. Apologise over accidents.
+						<ul>
+							<li>This does not apply to police in police pursuits only.</li>
+						</ul></li>
 					<li>WARNING: Do not throw props at cars or attempt to release a stuck car using props. Go to the dealer and have it returned.</li>
+					<li>Once you are removed from a vehicle by a cop, you cannot re-enter that same vehicle for 10 seconds.</li>
 					<li>Do not steal, take, or car jack others cars. The vehicle owner decides who drives at all times.</li>
 					<li>Park your car in a car park or on a footpath. Dont park/exit your vehicle on the road.</li>
 					<li>Do not build elevators and ramps to get cars into unreasonable spots. Keep cars at ground level.</li>
+					<li>Fading car door entrances must stay open for at least 4 seconds, no matter the method used to fade.</li>
 					<li>Do not create long ramps without walls (easy to fall off) as part of a base entrance.</li>
 					<li>Drive safely, keep down the speed and don't attempt to run others over.</li>
 					<li>Follow arrows and road signage. Blinkers (ALT + Left/Right Click) is optional.</li><br>
 
-
+							
 			<b>AFK and Suicide:</b>					
 					<li>Do not AFK for long periods of time as any job other than Citizen or Hobo.</li>
 					<li>You are not immune to RP when you are AFK. (You can be pick pocketed, raided, etc.)</li>
@@ -467,6 +472,7 @@
 					<li>You are not permitted to use any kotkeys or fast methods of access to get through your front door. You must use your keypad.</li>
 					<li>Fading doors are to be used as doors, windows and box lids only. Don't make bridges, stairs, floors or ceilings that fade.</li>
 					<li>Fading props cannot be the same material as its surroundings in an attempt to hide it. This applies to all fading props.</li>
+					<li>Fading car door entrances must stay open for at least 4 seconds, no matter the method used to fade.</li>
 					<li>You must not pulse, fade, use, or open any door that is being lock picked. Note: This does not apply to windows.</li>
 					<li>You are permitted to use custom doors (such as SteamID doors) for your valuable room only. The front door must be a normal type.</li>
 				<br>
