--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
 						</ul></li>
 					<li>WARNING: Do not throw props at cars or attempt to release a stuck car using props. Go to the dealer and have it returned.</li>
 					<li>Once you are removed from a vehicle by a cop, you cannot re-enter that same vehicle for 10 seconds.</li>
+					<li>Jobs that are not allowed to own a car are not allowed to ride in cars (unless riding in a citizen jobbed taxi).</li>
 					<li>Do not steal, take, or car jack others cars. The vehicle owner decides who drives at all times.</li>
 					<li>Park your car in a car park or on a footpath. Dont park/exit your vehicle on the road.</li>
 					<li>Do not build elevators and ramps to get cars into unreasonable spots. Keep cars at ground level.</li>
@@ -557,12 +558,12 @@
                     </ul>
                     <h4><b>Rules:</b></h4>
                     <ul>
-                        <li>As a Bartender, your Bar must be open to the public at all times. You are not allowed to AFK for over 5 minutes.</li>
-                        <li>Only the banker and his guards can defend the bank. Bystanders or customers cannot assist a banker defend his base.</li>
+                        <li>As a Bartender, your Bar must be open to the public at all times.</li>
+                        <li>You may charge up to $100 per entry if you wish.</li>
                     </ul>
                     <h4><b>Tips:</b></h4>
                     <ul class="tips">
-                        <li>Offer your customers drinks and vapes for some extra cash.</li>
+                        <li>Offer your customers drinks for some extra cash.</li>
 			<li>Decorate the Bar to increase its atmosphere.</li>
                     </ul>
                 </div>
@@ -790,6 +791,7 @@
                     <h4><b>Rules:</b></h4>
                     <ul>
                         <li>As the Mayor, before initiating a lockdown you must /broadcast the reason. Eg: <em>/broadcast Lockdown Reason: Gang violence on the street.</em></li>
+			<li>As the Mayor, you cannot ride in vehicles at all.</li>
                         <li>As the Mayor, keep the laws realistic and roleplay focused.</li>
                         <li>As the Mayor, the laws you place must not breach default laws or server rules. Eg: Arresting anyone with the name 'Johnny' on sight.</li>
                         <li>As the Mayor, you cannot act as a Police Officer or Crusader. You may only unarrest people.</li>
