--- a/index.html
+++ b/index.html
@@ -315,7 +315,8 @@
 					<li>Fading car door entrances must stay open for at least 4 seconds, no matter the method used to fade.</li>
 					<li>Do not create long ramps without walls (easy to fall off) as part of a base entrance.</li>
 					<li>Drive safely, keep down the speed and don't attempt to run others over.</li>
-					<li>Follow arrows and road signage. Blinkers (ALT + Left/Right Click) is optional.</li><br>
+					<li>Follow arrows and road signage. Blinkers (ALT + Left/Right Click) is optional.</li>
+					<li>Your car can be impounded for failing to pull over, ramming cars, and not parking as per above.</li><br>
 
 							
 			<b>AFK and Suicide:</b>					
@@ -898,6 +899,12 @@
 							<ul>
 								<li>An 'outpost' (eg: rooftop pillbox) is not included as a base, but only S.W.A.T. can base within any 'outpost'.</li>
 							</ul>
+			<li>You may only impound vehicles for the following reasons:
+				<ul>
+					<li>Not pulling over for police.</li>
+					<li>Ramming cars.</li>
+					<li>Not properly parked as per car rules.</li>
+				</ul></li>
 
                     </ul>
                     <h4><b>Tips:</b></h4>
