--- a/index.html
+++ b/index.html
@@ -310,7 +310,10 @@
 					<li>Once you are removed from a vehicle by a cop, you cannot re-enter that same vehicle for 10 seconds.</li>
 					<li>Jobs that are not allowed to own a car are not allowed to ride in cars (unless riding in a citizen jobbed taxi).</li>
 					<li>Do not steal, take, or car jack others cars. The vehicle owner decides who drives at all times.</li>
-					<li>Park your car in a car park or on a footpath. Dont park/exit your vehicle on the road.</li>
+					<li>Park your car in a car park or on a footpath. Dont park/exit your vehicle on the road.
+						<ul>
+							<li>For footpath parking, your car must have 2 wheels on the path to qualify.</li>
+						</ul></li>
 					<li>Do not build elevators and ramps to get cars into unreasonable spots. Keep cars at ground level.</li>
 					<li>Fading car door entrances must stay open for at least 4 seconds, no matter the method used to fade.</li>
 					<li>Do not create long ramps without walls (easy to fall off) as part of a base entrance.</li>
