--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
             <h3>Most Recent Changes: 28-May-2017</h3>
             <div class="dropdown">
 			<li><b>Server recently updated: Expidite your bug report by posting <a href="http://monumentalgaming.net/index.php?/topic/7920-darkrp-quick-bug-reports/" >DIRECTLY HERE</a>!</b></li>
+			<li><b>Note: This update requires your Model Detail set to High in your Video Options or the cars will not render properly.</b></li>
 			<li>Addition of Donator Model, High Roller, Highway Patrol, Jail Warden, Gopnik, and Road Hoon job specific rules.</li>
 			<li>Only shops of legal commerce can be built in the Town Centre out front of the PD. No houses or bases.</li>
 			<li>Make some attempt to fit your base into the map (no shitty materials on giant flying box bases).</li>
