--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@
 			<li>Apart from Gopniks, gangs are only permitted to have one base.</li>
 			<li>Base entrances must not be excessively difficult (or long) so you can simply camp it from the outside. Admin discretion.</li>
 			<li>Police cannot create checkpoints on the road and force players to stop UNLESS that player is doing something illegal at that moment.</li>
+			<li>Police can radio through to a Jail Warden and instruct them not to bail out repeat offenders, they must follow these instructions.</li>
+			<li>Road Hoons can be fined up to $1,000 for serial offending.</li>
+			<li>You vehicle may be impounded for the following reasons:
+				<ul>
+					<li>Ramming cars. (Admins can also ban for this)</li>
+					<li>Not pulling over for police.</li>
+					<li>Not properly parked as per car rules.</li>
+					<li>Vehicles used in weapons crime or murder.</li>
+				</ul></li>
             </div><br>
 
             <h3>What is RP?</h3>
@@ -341,7 +350,13 @@
 					<li>Do not create long ramps without walls (easy to fall off) as part of a base entrance.</li>
 					<li>Drive safely, keep down the speed and don't attempt to run others over.</li>
 					<li>Follow arrows and road signage. Blinkers (ALT + Left/Right Click) is optional.</li>
-					<li>Your car can be impounded for failing to pull over, ramming cars, and not parking as per above.</li><br>
+					<li>Your vehicle may be impounded for the following reasons:
+						<ul>
+							<li>Ramming cars. (Admins can also ban for this)</li>
+							<li>Not pulling over for police.</li>
+							<li>Not properly parked as per car rules.</li>
+							<li>Vehicles used in weapons crime or murder.</li>
+						</ul></li><br>
 
 							
 			<b>AFK and Suicide:</b>					
@@ -859,8 +874,11 @@
                     <h4><b>Rules:</b></h4>
                     <ul>
                         <li>The Jail Warden must conduct his primary work in the jail.</li>
-						<li>The Jail Warden can bail anyone, provided that person has not committed murder or attempted murder.</li>
-						<li>The Jail Warden is not allowed to perform typical police duties outside of the jail.</li>
+			<li>The Jail Warden can bail anyone, provided that person has not committed murder or attempted murder.
+				<ul>
+					<li>Police can radio through and instruct you not to bail out repeat offenders, you must follow their instructions.</li>
+				</ul>
+			<li>The Jail Warden is not allowed to perform typical police duties outside of the jail.</li>
                         <li><a class="linkblack" href="#po"><em>Note: Some police Officer rules may also apply to this role. Click here to see them.</em></a></li>
                     </ul>
                 </div>
@@ -1015,6 +1033,7 @@
 					<li>Not pulling over for police.</li>
 					<li>Ramming cars.</li>
 					<li>Not properly parked as per car rules.</li>
+					<li>Vehicles used in weapons crime or murder.</li>
 				</ul></li>
 
                     </ul>
@@ -1065,20 +1084,21 @@
                     <h4><b>Description:</b></h4>
                     <ul>
                         <li>Road Hoons think they own the streets.</li>
-                        <li>Cause headaches for the highway patrol.</li>
-						<li>Break as many road rules as you can without going to prison.</li>
-						<li>Aid in the escape of other criminals (getaway driving)</li>
+                        <li>Cause headaches for the highway patrol. (No ramming)</li>
+			<li>Break as many road rules as you can without going to prison. (No ramming)</li>
+			<li>Aid in the escape of other criminals. (Getaway driving)</li>
                     </ul>
                     <h4><b>Rules:</b></h4>
                     <ul class="tips">
                         <li>Road Hoons spend most of their time in a car, and less in a base.</li>
+			<li>Road Hoons can be fined up to $1,000 for serial offending.</li>
                         <li>Road Hoons can all base together, however cannot base with any other job.</li>
                         <li>Road Hoons can act as getaway drivers for any raider (or crime), but they must not particitape in the actual raid (or crime).</li>
-						<li>Road Hoons can get in between car pursuits of other cars and help the car get away. (No ramming though)</li>
-						<li>Spirit of Rule: As you can see, you have a lot of freedom here, provided you are doing it in cars.
-							<ul>
-								<li>(Note: You can also be arrested for assisting in crime just as easily. Play this job very openly.)</li>
-							</ul></li>
+			<li>Road Hoons can get in between car pursuits of other cars and help the car get away. (No ramming)</li>
+			<li>Spirit of Rule: As you can see, you have a lot of freedom here, provided you are doing it in cars.
+				<ul>
+					<li>(Note: You can also be arrested for assisting in crime just as easily. Play this job very openly.)</li>
+				</ul></li>
                     </ul>
                 </div>
                 <h3 class="red"><i>Secret Service</i></h3>
