--- a/index.html
+++ b/index.html
@@ -1208,7 +1208,7 @@
 			<b><h2>Useful Links:</h2></b><br>			
 				
 				Want to support MG and unlock extra features? Make a <a href="http://monumentalgaming.net/donate/" >Donation</a>!<br>
-				Are you missing files? Try subscribing to <a href="http://monumentalgaming.net/index.php?/topic/5434-missing-files-or-textures-look-no-further/" >these</a>!<br>
+				Missing textures? Errors? Reset your Garrysmod client properly by <a href="http://monumentalgaming.net/index.php?/topic/7961-how-to-reset-garrysmod-properly/" >following these instructions</a>.
 				Are you banned? Doesn't that suck.. Fill out a <a href="http://monumentalgaming.net/index.php?/forum/14-ban-appeals/" >Ban Appeal</a>.<br>
 				Minges online? No staff? Collect evidence and fill out a <a href="http://monumentalgaming.net/index.php?/forum/13-ban-requests/" >Ban Request</a>.<br>
 				Staff being abusive? Collect evidence and fill out an <a href="http://monumentalgaming.net/index.php?/forum/15-admin-abuse/" >Admin Abuse Complaint</a>.<br>
@@ -1216,6 +1216,8 @@
 				Have you found a mean bug? Be sure to send us a <a href="http://monumentalgaming.net/index.php?/topic/7920-darkrp-quick-bug-reports/" >Bug Report</a>!<br>
 				Ever thought about joining us on <a href="http://www.gametracker.com/server_info/119.252.190.33:10012/" >TeamSpeak</a>?<br>
 				Want to join the staff team? Make a <a href="http://monumentalgaming.net/index.php?/forum/17-mod-applications/" >Moderator Application</a>.<br>
+				All of our server content is hosted on the Workshop. Those files are <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=934793908" >listed here</a>!<br>'
+				
 			<br><br><br>
 
 			<b><h2>Controls:</h2></b>
