--- a/index.html
+++ b/index.html
@@ -1257,7 +1257,131 @@
 			<b><h2>Patch Notes:</h2></b>		
 			
 			
-<br><b>30 November 2016</b>
+
+<br><b>28 May 2017</b>
+
+<li>Added:
+<ul>
+<li>All new cars. Replacing the old cars with real life ones. More car packs to come once the cars are tuned up.</li>
+<li>Clothing Shop: In the bronx, modify your appearance with hundreds of thousands of unique combinations. Nobody will look the same again.</li>
+<li>Stamina. Jumping uses much more of it. You walk slower and cannot jump when you run out of it. Police can run a bit longer.</li>
+<li>Trade Chat: Use /t to access it. Only commerce specific chat should be put in here, nothing else.</li>
+<li>Advert Chat: This will retain the billboard system, so get used to it. Raid calls (etc) will be done in OOC with a simple // raid.</li>
+<li>OOC Chat: This chat will be used for purely OOC chat on a need to use basis. It's for help and calling raids/issues. Not for your dick swinging.</li>
+<li>Car Impound SWEP. Stock weapon for police, highway patrol, etc. Remove cars from the streets. (See police rules for when to use it)</li>
+<li>Car Fuel System: Cars run out of fuel depending on engine load. Refuel at the gas station or grab a jerry can if you can't make it there.</li>
+<li>Hunger Damage Sounds: This has been done by intention in DarkRP 2.7 and won't be removed.</li>
+<li>You can now hide your HUD with F6.</li>
+</ul></li><br>
+
+<li>New Models and Jobs:
+<ul>
+<li>Citizens: All new models, skins and clothes. Check out the closet. 'Users' cannot can only change the skins.</li>
+<li>Donator Random Slots: Custom models. Can make a custom /job. Agent Smith, Town Creep, John Cena, Kim Jong Un, Hitler, Matrix Neo, Morgan Freeman, Ronald McDonald, Snoop Dogg.</li>
+<li>High Rollers: A lot of new, rich people are being seen around downtown. Slot unlimited, donator only citizen job. Spawns with a juicy (multi-coloured) vape pen. Can custom /job.</li>
+<li>Highway Patrol: Has access to faster cars. Intended to patrol the streets and mostly deal with traffic violations, pursuits, and dealing with Road Hoons.</li>
+<li>Jail Warden: Spawns with weapons. Defend the jail and prevent others from escaping into the elevator. Plays in jail 24/7 unless food/health, or NLR.</li>
+<li>Mayor: New model. Mr Breen has taken leave and put his son into power while he's away.</li>
+<li>Police: New models. You can remove your hat at the closet.</li>
+<li>Police Chief: New model. Can no longer door ram or impound cars, since his job is intended to be in the police department.</li>
+<li>Road Hoon: Has access to a few hoon cars? Vin Diesel + GTAv Hoons</li>
+<li>S.W.A.T.: New models. Can no longer impound cars (ask the Highway Patrol for help). Spawns with G3A3.</li>
+<li>(Plenty of new models for other jobs as well. See the F4 menu.)</li>
+</ul></li><br>
+
+<li>Changes:
+<ul>
+<li>The MOTD should fully reflect the new setup, has all the new jobs and brings back recent changes for regular players to follow easily.</li>
+<li>Can now tune into another players personal camera with your own TV. Just ask them for the camera frequency.</li>
+<li>Job colours slightly revised to make things more obvious.</li>
+<li>Salaries of various jobs have been adjusted.</li>
+<li>Weed seeds are now smaller so you can tell them apart.</li>
+<li>The car impounder now looks like a slam instead of a crowbar.</li>
+<li>Many elements of the HUD adjusted to be easier to read.</li>
+<li>Everyone now has a speedo on their HUD at all times, measured in both units.</li>
+<li>Wanted and Warrant times have doubled.</li>
+<li>The agenda is now always shown for agenda groups. (All groups should have an agenda, use it like a mission dialog eg: "Return to base")</li>
+<li>Meth cooks now make 10% more money. (Their last buff, learn the class!)</li>
+<li>Criminals are auto-unarrested half way up the elevator shaft. This is intended. See the new Jail Warden job.</li>
+<li>You can no longer make annoying vape sounds.</li>
+<li>You can no longer pocket map any entities you shouldn't be able to.</li>
+<li>You no longer drop items from your pocket when you are arrested. (Only killed)</li>
+</ul></li><br>
+
+<li>Fixes:
+<ul>
+<li>Fixed various models changing to male01 when tased. NOTE: The new clothing system will do the same with some bodygroups and there is no way to fix this.</li>
+<li>Timers and sounds adjusted for the police handcuffs.</li>
+<li>Can no longer arrest ragdolls before cuffing them.</li>
+<li>Ents now properly clean up when a player disconnects from the server.</li>
+<li>Various suicide checks have been put in place. You cannot suicide anytime during a wanted, tase, cuff, or arrested phase.</li>
+<li>Police can now destroy entities properly (except a few old ones, this will be addressed soon with a rewrite of all stunstick vs ent events.)</li>
+<li>Smart Constraint will no longer area select anything it shouldn't.</li>
+</ul></li><br>
+
+<li>Staff:
+<ul>
+<li>Admin tellall now like the old one so it's easier to get attention of players.</li>
+<li>Mods can now force arrest players.</li>
+<li>Staff can now give Vape Pens.</li>
+<li>Setjob will not apply a job to someone who fails any custom checks. (eg: Is not Donator)</li>
+<li>Completely new logging system. (Type !blogs instead.)</li>
+</ul></li><br>
+
+<li>Updated:
+<ul>
+<li>DarkRP Core, ULX, URS, ULib, UTime, Wiremod, ARCBank, ARCLib, AWarn, Cuffs, Stungun.</li>
+<li>Big code cleanup which is still happening.</li>
+</ul></li>
+
+
+
+
+
+<br><br><b>7 March 2017</b>
+
+<li>Terrorist:
+	<ul>
+<li>Terrorist explosion visuals reworked with new trace particle smoke system.</li>
+<li>Terrorist explosion sound system reworked. Over 20 possible sound mixes and distant sounds reworked.</li>
+<li>Terrorist now screams for allah before his death, in true jihadi style. Taunt sound also customised to suit.</li>
+<li>Terrorist now gets paid $500 for killing the Mayor.</li>
+<li>Terrorist bombgen now explodes if it goes underwater.</li>
+<li>Terrorist bombgen makes an explosion sound when destroyed.</li>
+<li>Terrorist bombgen now clears properly stops making noise when it's destroyed while making a bomb.</li>
+	</ul></li><br>
+<li>General:
+	<ul>
+<li>Cuffs and no longer removed from a cuffed player during a weapon check.</li>
+<li>Players can now be returned to their location after being brought.</li>
+<li>Adjusted various elements of F4 menu to suit the server better.</li>
+<li>"Police issued" SG's now work properly.</li>
+<li>Medikit shipments now work properly.</li>
+<li>Neck snaps will now kill through armor.</li>
+<li>Minimum hit price is now $750, maxmimum is now $2,500.</li>
+<li>PP19 damage has been further increased, by 25%.</li>
+<li>Players can no longer push NPC's and doors around the map with melee weapons.</li>
+<li>Police can now rearrest a player who is breaking out of jail.</li>
+<li>Tazed players can no longer jump to avoid arrest.</li>
+	</ul></li><br>
+<li>Added:
+	<ul>
+<li>Bartender Job. Man the bar in the Town Square.</li>
+<li>Slot machines in the bar with a vault upstairs for the Bartender to login to and take money from.</li>
+<li>ATMs and EFTPos machines. Put your money in the bank. (In the future, money on death, tax, bank interest will occur.)</li>
+<li>AWarn2. Currently being tested. Using this at the moment is optional.</li>
+	</ul></li><br>
+<li>Updated:
+	<ul>
+<li>Antihax</li>
+<li>ULX</li>
+<li>RP Core</li>
+	<ul>
+	
+	
+
+
+<br><br><b>30 November 2016</b>
 
 <li>General:
 	<ul>
