--- a/index.html
+++ b/index.html
@@ -783,14 +783,16 @@
                     <ul>
                         <li>An extension of the Police.</li>
                         <li>Highly trained in advanced driving, the Police rely on the H.W.P. for assistance on the roads.</li>
-						<li>Has access to faster cars and vehicle specific weapons to stop vehicles in their tracks.</li>
+			<li>This job has a whitelist on top of being a Donator. You need to be whitelisted by an admin.</li>
+			<li>Has access to faster cars and special items to stop vehicles in their tracks.</li>
                     </ul>
                     <h4><b>Rules:</b></h4>
                     <ul>
                         <li>Highway Patrol should be primarily patrolling the streets in a vehicle and looking for traffic violations.</li>
-						<li>Highway Patrol may act as a normal police officer, but only if they chance across something illegal.</li>
-						<li>Highway Patrol should not be responding to typical police calls, except ones involving cars and/or murder.</li>
-						<li>Highway Patrol must not abuse any of their special weapons or entities. Will face strong punishment.</li>
+			<li>Highway Patrol may act as a normal police officer, but only if they chance across something illegal.</li>
+			<li>Highway Patrol generally should not be responding to typical police calls, except ones involving cars and/or murder.</li>
+			<li>Highway Patrol must not abuse any of their special weapons or entities. Will face strong punishment.</li>
+			<li><b>Remember what you were told about in your training or face whitelist removal.</b></li>
                         <li><a class="linkblack" href="#po"><em>Note: Police Officer rules also apply to this role. Click here to see them.</em></a></li>
                     </ul>
                 </div>
