--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
 			<li>Police cannot create checkpoints on the road and force players to stop UNLESS that player is doing something illegal at that moment.</li>
 			<li>Police can radio through to a Jail Warden and instruct them not to bail out repeat offenders, they must follow these instructions.</li>
 			<li>Road Hoons can be fined up to $1,000 for serial offending.</li>
+			<li>Highway patrol has a whitelist on top of being a Donator. You need to be whitelisted by an admin.</li>
+			<li>If you drive a car right up to a police operation (their lights on), you risk being fined or arrested.</li>
 			<li>You vehicle may be impounded for the following reasons:
 				<ul>
 					<li>Ramming cars. (Admins can also ban for this)</li>
@@ -337,6 +339,7 @@
 							<li>This does not apply to police in police pursuits only.</li>
 						</ul></li>
 					<li>WARNING: Do not throw props at cars or attempt to release a stuck car using props. Go to the dealer and have it returned.</li>
+					<li>If you drive a car right up to a police operation (their lights on), you risk being fined or arrested.</li>
 					<li>Police cannot create checkpoints on the road and force players to stop UNLESS that player is doing something illegal at that moment.</li>
 					<li>Once you are removed from a vehicle by a cop, you cannot re-enter that same vehicle for 10 seconds.</li>
 					<li>Jobs that are not allowed to own a car are not allowed to ride in cars (unless riding in a citizen jobbed taxi).</li>
