--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                     </li>
 					<li>You may have 2 extra doors, however these doors can only be triggered by buttons which must be placed directly on the centre or side of the door.</li>
 					<li>All elevators and timed doors are considered a locked door. While you can use them, it's strategically far better that you don't.</li>
-					<li>You are not permitted to use any kotkeys or fast methods of access to get through your front door. You must use your keypad.</li>
+					<li>You are not permitted to use any hotkeys or fast methods of access to get through your front door. You must use your keypad.</li>
 					<li>Fading doors are to be used as doors, windows and box lids only. Don't make bridges, stairs, floors or ceilings that fade.</li>
 					<li>Fading props cannot be the same material as its surroundings in an attempt to hide it. This applies to all fading props.</li>
 					<li>Fading car door entrances must stay open for at least 4 seconds, no matter the method used to fade.</li>
@@ -761,7 +761,7 @@
 							</ul>
                         <li>Gopniks specifically need at least 3 members to raid.</li>
                         <li>Since Gopniks have no leader, they can raid an establishment until all their members have died once.</li>
-                        <li>Gopniks cannot war as they have no designated leader to perfoem declarations.</li>
+                        <li>Gopniks cannot war as they have no designated leader to perform declarations.</li>
 						<li>Also refer global raiding rules found in Section 3, but the above adjustments take precedence over global rules.</li>
                     </ul>
                     <h4><b>Tips:</b></h4>
@@ -1249,7 +1249,7 @@
 			F: Hold down for driving lights.<br>
 			B: Cruise Control (add speed by tapping W)<br>
 			Alt+LClick: Left blinker.<br>
-			Alt+LRlick: Right blinker.<br>
+			Alt+RClick: Right blinker.<br>
 			Alt+MClick: Hazard lights.<br><br>
 
 			<b>Police Vehicles:</b><br>
